Fixed small text input appearance on ie 11

--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -805,4 +805,4 @@ input[type="radio"]:checked + .ev-radio.ev-graphic-radio:before { border-color: 
 @media only screen and (max-width: 782px) { [data-key="ev-help-popup"] .ev-modal-close { color: #333; margin-right: 20px; top: 12px; } }
 [data-key="ev-help-popup"] .ev-modal-close:hover { color: rgba(255, 255, 255, 0.5); }
 
-.ev input[type="text"].ev-field-text-style-small { font-size: 12px; line-height: 20px; padding: 1px 5px; }
+.ev input[type="text"].ev-field-text-style-small { font-size: 12px; line-height: 20px; padding: 1px 5px; min-height: 24px; }
